Reorganice folders accourding to SBT convention, and replace play with akka-http

--- a/src/main/public/views/index.scala.html
+++ b/src/main/public/views/index.scala.html
@@ -1,17 +1,16 @@
-@()
 <!doctype html>
 <html lang="en" data-framework="angular2">
     <head>
-        @* in this version of the application the typescript compilation is done in the browser *@
+        <!-- in this version of the application the typescript compilation is done in the browser -->
     <meta charset="utf-8">
     <title>Angular2 • TodoMVC</title>
-    <link rel="stylesheet" href="@routes.Assets.versioned("lib/todomvc-common/base.css")">
+    <link rel="stylesheet" href="lib/todomvc-common/base.css">
     <link rel="stylesheet" href="assets/stylesheets/todomvc-app.css">
-    <script src='@routes.Assets.versioned("lib/angular2/bundles/angular2-polyfills.js")'></script>
-    <script src='@routes.Assets.versioned("lib/systemjs/dist/system.js")'></script>
-    <script src='@routes.Assets.versioned("lib/typescript/lib/typescript.js")'></script>
-    <script src='@routes.Assets.versioned("lib/rxjs/bundles/Rx.js")'></script>
-    <script src='@routes.Assets.versioned("lib/angular2/bundles/angular2.dev.js")'></script>
+    <script src='lib/angular2/bundles/angular2-polyfills.js'></script>
+    <script src='lib/systemjs/dist/system.js'></script>
+    <script src='lib/typescript/lib/typescript.js'></script>
+    <script src='lib/rxjs/bundles/Rx.js'></script>
+    <script src='lib/angular2/bundles/angular2.dev.js'></script>
 
     </head>
     <body>
@@ -26,24 +25,24 @@
             <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
         </footer>
         <script>
-        @* typescript is async downloaded by SystemJs and transpiled to Javascript in the browser *@
+            // typescript is async downloaded by SystemJs and transpiled to Javascript in the browser
 			System.config({
                 transpiler: 'typescript',
                 typescriptOptions: {
-                               @* these settings of the typescript compiler are required for angular2 *@
+                                // these settings of the typescript compiler are required for angular2
                                 emitDecoratorMetadata: true,
                                 experimentalDecorators: true
                             },
                             packages: {
                                 'assets/app': {
-                                    defaultExtension: 'ts' @* the modules of our app are to be downloaded as typescript *@
+                                    defaultExtension: 'ts' // the modules of our app are to be downloaded as typescript 
                                 },
                                 'assets/lib': {
-                                    defaultExtension: 'js' @* the libs we depend on are javascript *@
+                                    defaultExtension: 'js' // the libs we depend on are javascript 
                                 }
                             },
                             map: {
-                                'app' : 'assets/app' @* play standardly publishes our asset files under /assets *@
+                                'app' : 'assets/app' // play standardly publishes our asset files under /assets
                             }
                         });
                         System.import('app/bootstrap')
